--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <p><mark>I grew p in Kerala.I lived near river Periyar and I really miss the sunsets over the water.</mark></p>
     </details>
 	</section>
-	<img src="download.PNG" alt="Web design" width="200" height="250"><p>This page was created by Krishnapriya K R & Colleen van Lent. To learn more about web design,visit <a href="http://intro-webdesign.com/">Intro to Web Design.</a></p>
+	<img src="download.png" alt="Web design" width="200" height="250"><p>This page was created by Krishnapriya K R & Colleen van Lent. To learn more about web design,visit <a href="http://intro-webdesign.com/">Intro to Web Design.</a></p>
 	
 </body>
