--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </section>
     <section>
 	<h2>Achievements</h2>
-	<p>Progress in the cource(100%)</br>Prograss in the specialization capstone(20%)</br>Progress in life goals(67%)</p>
-	</section>
+	    <label for="file">Progress in the cource(100%)</label>  <progress id="file" value="100" max="100"></progress> </br> <label for="file">Progress in the specialization capstone(20%)</label>  <progress id="file" value="20" max="100"> </progress></br> <label for="file">Progress in life goals(67%)</label>  <progress id="file" value="67" max="100"> </progress>
+	
+    </section>
 
     <section>
 	<h2>More About Me</h2>
